force-app/main/default/objects/agentforcews__c/agentforcews__c.object-meta.xml
<CustomObject>
    <label>エージェント検討</label>
    <nameField>
        <label>エージェント名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>