force-app/main/default/objects/agentforcews__c/fields/agentrole__c.field-meta.xml
<CustomField>
    <fullName>agentrole__c</fullName>
    <label>エージェントへの期待</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>