force-app/main/default/objects/agentforcews__c/fields/feasibility__c.field-meta.xml
<CustomField>
    <fullName>feasibility__c</fullName>
    <label>実現性・データ準備度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>